SERVER-74124 Disallow shard key pattern with fields that have parts that start with '$'